# graphics-perf-test-system

./: README.md
backend/api-service/: graphics-perf.db  pom.xml
backend/api-service/data/runs/27/: render_events.jsonl
backend/api-service/src/main/java/com/example/apiservice/: ApplicationApiService.java
backend/api-service/src/main/java/com/example/apiservice/controller/: ApplicationController.java  RunController.java  RunMetricsController.java  SceneController.java
backend/api-service/src/main/java/com/example/apiservice/execution/: CpuMemProvider.java  CpuMemSnapshot.java  GpuMetricsProvider.java  GpuMetricsSnapshot.java  LocalProcessLauncher.java  NvidiaSmiGpuMetricsProvider.java  OshiProcessMetricsProvider.java  ProcessLauncher.java  ProcessMetricsProvider.java  ProcessMetricsSnapshot.java  ProcessStartRequest.java  RunExecutionResult.java  RunOrchestrator.java  RunOrchestratorImpl.java  SystemCpuMemProvider.java
backend/api-service/src/main/java/com/example/apiservice/service/: ApplicationService.java  RunService.java  SceneService.java
backend/api-service/src/main/resources/: application.properties
docs/: 系统实现细节设计书.md  系统架构设计书.md
opengl-injection/: CMakeLists.txt
opengl-injection/include/: RenderEventWriter.h  SwapHook.h
opengl-injection/injector/: Injector.cpp
opengl-injection/src/: DllMain.cpp  RenderEventWriter.cpp  SwapHook.cpp
scripts/dll/: gen_def_from_exports.py  opengl32_exports.txt  opengl32_proxy.cpp  opengl32_proxy.def
scripts/test/: cpu.cpp  opengl-demo.cpp
(+19 files in other folders)
